# RWeb

./: CMakeLists.txt  backtrace.md  index.html  readme_version1.md  readme_version2.md
WebServer-master/WebServer/: Channel.h  Epoll.h  Server.cpp
Webbench/: socket.c  webbench.c
include/: AsyncLogging.hpp  Logger.hpp  MemoryPool.hpp  ThreadPool.hpp  epoll.hpp  requestData.hpp  util.hpp
log/: 2025-2-11-17-10-0.txt  2025-2-11-17-10-11.txt  2025-2-11-17-10-14.txt  2025-2-11-17-10-2.txt  2025-2-11-17-10-5.txt  2025-2-11-17-10-7.txt  2025-2-11-17-10-9.txt  2025-2-11-17-24-11.txt  2025-2-11-17-24-13.txt  2025-2-11-17-24-14.txt  2025-2-11-17-24-16.txt  2025-2-11-17-24-18.txt  2025-2-11-17-24-19.txt  2025-2-11-17-24-9.txt  2025-2-11-17-25-11.txt  2025-2-11-17-25-13.txt  2025-2-11-17-25-16.txt  2025-2-11-17-25-18.txt  2025-2-11-17-25-20.txt  2025-2-11-17-25-22.txt  2025-2-11-17-25-25.txt  2025-2-11-17-25-27.txt  2025-2-11-17-25-29.txt  2025-2-11-17-25-31.txt  2025-2-11-17-25-44.txt  2025-2-11-17-25-47.txt  2025-2-11-17-25-49.txt  2025-2-11-17-25-51.txt  2025-2-11-17-25-53.txt  2025-2-11-17-25-56.txt  2025-2-11-17-25-58.txt  2025-2-11-17-26-0.txt  2025-2-11-17-26-2.txt  2025-2-11-17-26-5.txt  2025-2-11-17-8-36.txt  2025-2-11-17-8-38.txt  2025-2-11-17-8-40.txt  2025-2-11-17-8-43.txt  2025-2-11-17-8-45.txt  2025-2-11-17-8-47.txt  (+20 more)
neatWebserver/: CMakeLists.txt
neatWebserver/include/: requestData.h  threadpool.h
neatWebserver/src/: epoll.cpp  main.cpp  requestData.cpp  threadpool.cpp
old_version/old_version1/: CMakeLists.txt  readme_version1.md
old_version/old_version1/include/: MemoryPool.hpp  ThreadPool.hpp
old_version/old_version1/postfile/: 7.txt
old_version/old_version1/src/: MemoryPool.cpp  tre.cpp
old_version/old_version2/: CMakeLists.txt
old_version/old_version2/include/: LFUcache.hpp  MemoryPool.hpp  ThreadPool.hpp  requestData.hpp
old_version/old_version2/postfile/: 2.txt  3.txt  5.txt
old_version/old_version2/src/: MemoryPool.cpp  ThreadPool.cpp  easy.cpp  epoll.cpp  main.cpp  requestData.cpp  testLFU.cpp  util.cpp
old_version/version1/: LFUcache.cpp  ThreadPool.cpp  c1.cpp  epoll.cpp  main.cpp  requestData.cpp  testmem.cpp
postfile/: 1.txt  4.txt  6.txt  8.txt
src/: AsyncLogging.cpp  LFUcache.cpp  LFUcache.hpp  Log_test.cpp  Logger.cpp  MemoryPool.cpp  MemoryPool.hpp  ThreadPool.cpp  ThreadPool.hpp  c1.cpp  c1.hpp  c2.hpp  easy.cpp  epoll.cpp  epoll.hpp  index.html.2  main.cpp  requestData.cpp  requestData.hpp  testLFU.cpp  test_read.txt  testmem copy.cpp  testmem.cpp  util.cpp  util.hpp
